Tue Jul  6 12:08:34 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Base/Hello.idl
        * connectors/ami4ccm/tests/AsynchT/Base/AsynchT.idl
        * connectors/ami4ccm/tests/AsynchT/Sender/AsynchT_Sender_exec.cpp
        * connectors/ami4ccm/tests/AsynchT/Sender/AsynchT_Sender_exec.h
        * connectors/ami4ccm/tests/DelReplyH/Base/DelReplyH.idl
        * connectors/ami4ccm/tests/Exceptions/Base/ExceptionT.idl
        * connectors/ami4ccm/tests/InterInArgs/Base/InterInArgsT.idl
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsT_Sender_exec.cpp
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsT_Sender_exec.h
        * connectors/ami4ccm/tests/InterInOutArgs/Base/InterInOutT.idl
        * connectors/ami4ccm/tests/InterInOutArgs/Receiver/InterInOutT_Receiver_exec.cpp
        * connectors/ami4ccm/tests/InterInOutArgs/Sender/InterInOutT_Sender_exec.cpp
        * connectors/ami4ccm/tests/InterMulti/Base/InterMulti.idl
        * connectors/ami4ccm/tests/InterOutArgs/Base/InterOutArgsT.idl
        * connectors/ami4ccm/tests/InterReturn/Base/InterReturnT.idl
        * connectors/ami4ccm/tests/NoReplyH/Base/NoReplyH.idl
        * connectors/ami4ccm/tests/OneProcess/Base/OneProcess.idl
        * connectors/ami4ccm/tests/OneReplyH/Base/OneReplyH.idl
        Add extra pragma to  idl files. Pass context to threads i.o cashing connection.

Tue Jul 06 11:33:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* DAnCE/tools/Split_Plan/Locality_Splitter.cpp:
	  Fixed bug in key comparison causing assertions on VC9.

Tue Jul  6 11:13:22 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ciao.doxygen:
        * etc/ciao_DAnCE.doxygen:
        * etc/ciao_config_handlers.doxygen:
        * etc/ciao_dds4ccm.doxygen:
          Reduced the size of the colloboration graphs

Tue Jul 06 09:50:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * DAnCE/tests/CIAO/EM-Shutdown-Failures: